--- a/styles/home.css
+++ b/styles/home.css
@@ -67,6 +67,7 @@
 
 .intro .btn {
   background-color: #e0e0e0;
+  color: rgb(var(--text-dark));
   padding: 1rem;
   width: 30rem;
   font-size: 1rem;
@@ -79,6 +80,7 @@
 
 .intro .btn:hover {
   background-color: #d0d0d0;
+  color: rgb(var(--text-light));
 }
 
 .intro .btn.active {
@@ -87,10 +89,10 @@
 }
 
 .intro .carousel-item {
-  padding: 20px;
+  padding: 1rem;
   text-align: left;
   background-color: #f8f9fa;
-  border-radius: 10px;
+  border-radius: 1rem;
   height: 35vh;
 }
 
@@ -104,7 +106,7 @@ video {
   border-radius: 1rem;
   scale: 0.99;
 }
-video:hover{
+video:hover {
   scale: 1;
 }
 .testimonials .card {
@@ -112,8 +114,8 @@ video:hover{
   margin: 0 0.5rem;
   border: none;
 }
-.carousel-control-prev,
-.carousel-control-next {
+.testimonials .carousel-control-prev,
+.testimonials .carousel-control-next {
   background-color: rgba(0, 0, 0, 0.5);
   width: 5rem;
   height: 5rem;
@@ -133,6 +135,7 @@ video:hover{
   flex-direction: column;
   justify-content: flex-end;
   pointer-events: none;
+  color: #fff;
 }
 
 @media (min-width: 576px) {
@@ -145,6 +148,17 @@ video:hover{
   }
 }
 
+@media (max-width: 768px) {
+  .hero-content {
+    background-color: rgb(var(--primary-azure));
+  }
+
+  .intro {
+    grid-template-columns: repeat(1, 1fr);
+
+    grid-template-rows: repeat(1, 1fr);
+  }
+}
 @media (min-width: 768px) {
   .testimonials .carousel-inner {
     padding: 1em;
@@ -203,7 +217,7 @@ video:hover{
   left: 0;
   right: 0;
   bottom: 0;
-  background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.7));
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.7));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -221,7 +235,7 @@ video:hover{
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,0.3);
+  background: rgba(0, 0, 0, 0.3);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -234,7 +248,7 @@ video:hover{
 
 .motivational-banner-box:hover .text-overlay,
 .motivational-banner-box:hover .image-overlay {
-  background: rgba(0,0,0,0.6);
+  background: rgba(0, 0, 0, 0.6);
 }
 /* Lightbox Styles */
 .lightbox {
@@ -245,7 +259,7 @@ video:hover{
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,0.9);
+  background: rgba(0, 0, 0, 0.9);
   padding: 2rem;
 }
 
@@ -302,19 +316,19 @@ video:hover{
 
 @media (max-width: 767.98px) {
   .motivational-banner-box {
-      min-height: 300px;
+    min-height: 300px;
   }
 
   .lightbox {
-      padding: 1rem;
+    padding: 1rem;
   }
 
   .lightbox-close {
-      top: -30px;
-      right: -10px;
+    top: -30px;
+    right: -10px;
   }
 
   .lightbox-nav {
-      font-size: 1.5rem;
+    font-size: 1.5rem;
   }
 }
