--- a/styles/general.css
+++ b/styles/general.css
@@ -105,6 +105,14 @@ h6 {
 .r-large .btn {
   width: 8rem;
 }
+/* login/sign up form */
+.loginError,
+.signupError {
+  color: #dc3545;
+  font-size: 0.9rem;
+  display: none;
+}
+
 @media (prefers-reduced-motion) {
   .hidden {
     transition: none;
@@ -115,7 +123,6 @@ h6 {
   .logo {
     display: none;
   }
-
 }
 @media (max-width: 992px) {
   .logo {
