--- a/styles/services.css
+++ b/styles/services.css
@@ -1,27 +1,16 @@
-/* Services Section Styling */
-.services .card {
-  border: none;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-}
-
-.services .card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-  
-}
-
-.services .card-body {
-  padding: 2rem;
-}
-
-.services .card-title {
-  font-size: 1.25rem;
+/* FAQ Section Styling */
+.accordion-button {
+  background-color: #fff;
   font-weight: bold;
-  margin-bottom: 1rem;
+  border-radius: 0.1rem;
+  border: none;
 }
 
-.services .card-text {
-  font-size: 0.9rem;
-  color: #555;
+.accordion-button:not(.collapsed) {
+  background-color: rgba(var(--primary-azure), 0.3);;
+}
+
+.accordion-body {
+  border-top: none;
+  border-radius: 0 0 5px 5px;
 }
